--- a/results/Jordan.Rmd
+++ b/results/Jordan.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Jordan lab AML-PBMC single cell RNA-Seq expt."
-author: "Kent Riemondy RBI"
-date: "January 31, 2017"
+author: "Kent Riemondy and Austin Gillen RBI"
 output:
   html_document:
     toc: true
@@ -14,8 +13,8 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_chunk$set(cache = FALSE)
-knitr::opts_chunk$set(cache.lazy = FALSE)
+knitr::opts_chunk$set(cache = TRUE)
+#knitr::opts_chunk$set(cache.lazy = FALSE)
 knitr::opts_chunk$set(warning = FALSE)
 ```
 
@@ -41,8 +40,8 @@ library(purrr)
   
 Sample | Treatment
 -------- | ----------  
-Sample 1 | Pmbcs from a patient at AML diagnosis
-Sample 2 | Pmbcs from a patient at remission
+Sample 1 | Pbmcs from a patient at AML diagnosis
+Sample 2 | Pbmcs from a patient at remission
 Sample 3 | Pbmcs from a patient at relapse
 
 "The three samples are the same patient- sample 1 is diagnosis, sample 2 is remission and sample 3 is relapse. There are some immunophenotypic changes that we see- appearance of CD56 on malignant cells and some genetic changes – appearance of a CEBPA mutation. The hope is the RNA seq will pick out the malignant cells and there will be a disappearance/replacement with lymphocytes(remission) and a re-emergence(relapse)."
@@ -115,6 +114,8 @@ cell_counts <- function(seurat_object){
 ```
 
 
+The percentage of reads aligning to mitochondria is often an indicator of cell quality. Cells that have lysed prior to capture preferentially retain mitochondial RNA, but lose cellular cytoplasmic mRNA. As shown below there is a strong negative correlation with the number of UMIs and the proportion of reads aligning to mitochondria. Cells with less than 15% mitochondrial reads will be retained for further analysis.
+
 ```{r QC, cache.lazy=FALSE}
 mito.genes <- grep("^MT-", rownames(pbmc@data), value = T)
 proportion.mito <- colSums(expm1(pbmc@data[mito.genes, ]))/colSums(expm1(pbmc@data))
@@ -123,31 +124,24 @@ pbmc <- AddMetaData(pbmc, proportion.mito, "proportion.mito")
 #VlnPlot(pbmc, "nGene")
 #VlnPlot(pbmc, "nUMI")
 VlnPlot(pbmc, "proportion.mito")
-
-knitr::kable(cell_counts(pbmc),
-             caption = "Number of cells passing a filter of needing at least 250 genes detected (>0 UMIs per gene) and each gene being present in at least 5 cells")
 ```
 
-The percentage of reads aligning to mitochondria is often an indicator of cell quality. Cells that have lysed prior to capture preferentially retain mitochondial RNA, but lose cellular cytoplasmic mRNA. As shown below there is a strong negative correlation with the number of UMIs and the proportion of reads aligning to mitochondria. Cells with less than 15% mitochondrial reads will be retained for further analysis. The title of plots indicates the correlation coefficent (pearson) between the two plotted variables. Each color represents a different sample. 
-
 ```{r qc_mito_problems}
-par(mfrow = c(1, 2))
 GenePlot(pbmc, "nUMI", "proportion.mito")
-GenePlot(pbmc, "nUMI", "nGene")
+
 ```
 
 ```{r}
 pbmc <- SubsetData(pbmc, subset.name = "proportion.mito", accept.high = 0.15)
 
-knitr::kable(cell_counts(pbmc),
-             caption = "Number of cells passing an additional filter requiring < 15% of the UMIs be derived from mitochondria")
+
 ```
 
 ```{r ngenes_filter}
 pbmc <- SubsetData(pbmc, subset.name = "nGene", accept.low = 250)
 
 knitr::kable(cell_counts(pbmc),
-             caption = "Number of cells passing an additional filter requiring at least 500 genes detected")
+             caption = "Number of cells passing an additional filter requiring less than 15% mitochondrial reads and at least 500 genes detected")
 ```
 
 After filtering the distribution of UMIs, Genes, and Proportion of mitochondrial reads is shown below:
@@ -170,7 +164,7 @@ pbmc <- MeanVarPlot(pbmc,
                     x.low.cutoff = 0.0125, 
                     x.high.cutoff = 4, y.cutoff = 0.5, do.contour = F, do.plot = F)
 
-#length(pbmc@var.genes)
+length(pbmc@var.genes)
 
 ```
 
@@ -178,7 +172,7 @@ pbmc <- MeanVarPlot(pbmc,
 pbmc <- PCA(pbmc, pc.genes = pbmc@var.genes, do.print = TRUE, pcs.print = 5, genes.print = 5)
 
 pbmc <- ProjectPCA(pbmc)
-pbmc <- RunTSNE(pbmc, dims.use = 1:14, do.fast = T, k.seed = 1)
+pbmc <- RunTSNE(pbmc, dims.use = 1:15, do.fast = T, k.seed = 1)
 ```
 
 ## PCA
@@ -187,7 +181,10 @@ pbmc <- RunTSNE(pbmc, dims.use = 1:14, do.fast = T, k.seed = 1)
 ```{r plot_pca, eval = T}
 PCAPlot(pbmc, 1, 2)
 PCElbowPlot(pbmc)
-PCHeatmap(pbmc, pc.use = 1:14, cells.use = 2000, do.balanced = TRUE, label.columns = FALSE, use.full = FALSE, do.plot = F)
+```
+
+```{r, eval = F, message = F, warning = F}
+PCHeatmap(pbmc, pc.use = 1:15, cells.use = 2000, do.balanced = TRUE, label.columns = FALSE, use.full = FALSE, do.plot = F)
 ```
 
 ## TSNE projection
@@ -195,12 +192,12 @@ PCHeatmap(pbmc, pc.use = 1:14, cells.use = 2000, do.balanced = TRUE, label.colum
   
   Shown below is a TSNE projection of the single cell data, with each cell colored by the sample type. Overall there is quite a large degree of structure in the data with some apparent clusters shared with the samples, and also unique to each sample.
   
-```{r plot_TSNE}
-TSNEPlot(pbmc)
+```{r plot_TSNE, fig.width = 14, fig.height = 14}
+TSNEPlot(pbmc, colors.use = brewer.pal(n = 11, "Paired"))
 ```
 
 ## Potential Confounding Factors
-  A challenge with single-cell RNA-Seq is the high degree of technical noise. Variables such as the number of detected genes or UMIs can drive apparent differences in sample transcriptomes. Shown below is the same `TSNE` projection with each cell colored by the number of genes, umis, or percent mitochondria detected. It appears that sample 2 is dominated by mitochondrial genes, which may be the primary driver of the clustering pattern observed for sample 2. 
+  A challenge with single-cell RNA-Seq is the high degree of technical noise. Variables such as the number of detected genes or UMIs can drive apparent differences in sample transcriptomes. Shown below is the same `TSNE` projection with each cell colored by the number of genes, umis, or percent mitochondria detected. 
   
 ```{r find_confounding_issues}
 FeaturePlot(pbmc, "nGene")
@@ -208,61 +205,75 @@ FeaturePlot(pbmc, "nUMI")
 FeaturePlot(pbmc, "proportion.mito")
 ```
 
-## Marker genes enriched in each cell population
-  Next we will determine genes enriched in each sample by comparing gene expression in each sample to all other samples. Plotted below are the top 10 enriched genes detected in each sample for all cell transcriptomes (Yellow is high, purple is low).
+## Cluster identification
+
+  Unsupervised clustering was performed to identify transcriptionally distinct cell populations. A graph-based algorithm was used that builds a k-nearest neighbor (KNN) graph on the eucidean distances calculated from principal components, weights each edge based on the local neighboorhod using a jaccard statics, then prunes the graph to select clusters using an optimization function. The graph based algorithm is implemented in the Seurat R package.  Clusters are visualized using TSNE, but the cluster assignments are based on the first 14 principal components.
   
 ```{r find_markers, fig.width = 14, fig.height = 14, warning=FALSE}
 pbmc <- FindClusters(pbmc, 
-                     pc.use = 1:12, 
-                     k.param = 20, 
+                     pc.use = 1:14, 
+                     k.param = 25, 
                      resolution = 0.6, 
                      print.output = 0, 
                      plot.SNN = F,
                      save.SNN = T, random.seed = 0)
-TSNEPlot(pbmc, colors.use = brewer.pal(n = 11, "Paired"), do.label = T, label.size = 8)
+
+TSNEPlot(pbmc, colors.use = brewer.pal(n = 12, "Paired"), do.label = T, label.size = 10)
 ```
+
+
+
+## Gene expression per cluster
+
+Next we will determine genes enriched in each sample by comparing gene expression in each sample to all other samples. Plotted below are the top 10 enriched genes detected in each sample for all cell transcriptomes (Yellow is high, purple is low).
 
 ```{r}
 pbmc_markers <- FindAllMarkers(pbmc, only.pos = TRUE, min.pct = 0.25, thresh.use = 0.25)
 pbmc_markers %>% group_by(cluster) %>% top_n(10, avg_diff) -> top10
 ```
 
-```{r, fig.width = 16, fig.height= 20 }
+```{r, fig.width = 20, fig.height= 20 }
 DoHeatmap(pbmc, genes.use = top10$gene, order.by.ident = TRUE, slim.col.label = TRUE, cexRow = 0.75, remove.key = TRUE,  margins = c(8, 8))
 ```
 
   Plotted below are the abundances of the top marker genes detected per sample (red is high, yellow is low) projected onto the TSNE map. 
   
-```{r genes_enriched_per_cluster, fig.width = 10, fig.height= 10, eval = F }
-top6_genenames <- split(top10, top10$cluster) %>% map(., ~.x[1:3, ]$gene)
+```{r genes_enriched_per_cluster, fig.width = 7.5, fig.height= 7.5, eval = T }
+top6_genenames <- split(top10, top10$cluster) %>% map(., ~.x[1:4, ]$gene)
 
 plot_tsnes <- function(x, y) {
   #par(mar=c(0,0,1,0))
   #plot(0,type='n',axes=FALSE,main = y, ylab = "", xlab = "") 
   print(y)
-  FeaturePlot(pbmc, x, pt.size = 0.2)
+  FeaturePlot(pbmc, x, pt.size = 0.5)
 } 
 
 walk2(top6_genenames, names(top6_genenames), ~plot_tsnes(.x, .y))
 ```
 
-```{r}
-FeaturePlot(pbmc, "CEBPA")
+## Classifying the cell type for each cluster
+
+  Plotted below are a set of known marker immune cell genes that help to identify each cell population. Classification based on previous single cell analyses of pbmcs (http://www.nature.com/articles/ncomms14049#f5)
+  
+```{r,  fig.width = 10, fig.height= 10}
+immune_markers <- c(t_cells = "CD3D", cd8_t ="CD8A", cytotoxic_t = "NKG7", dendritic = "FCER1A", monocytes = "S100A8", megakaryocyte = "PF4", b_cell = "CD79A", cd4_4 = "IL7R", monocyte = "CD14")
+
+knitr::kable(data_frame(populations = names(immune_markers), markers = immune_markers))
+
+FeaturePlot(pbmc, immune_markers, pt.size = .25)
 ```
 
-```{r}
-immune_markers <- c(t_cells = "CD3D", cd8_t ="CD8A", cytotoxic_t = "NKG7", dendritic = "FCER1A", "S100A8", megakaryocyte = "PF4", b_cell = "CD79A", cd4_4 = "IL7R", monocyte = "CD14")
-FeaturePlot(pbmc, immune_markers)
-```
+Next is plotted a set of markers associated with different AML cell types. 
 
-Classification taken from (http://www.nature.com/articles/ncomms14049#f5)
-```{r}
-aml_markers = c(Blasts_and_Immature_Ery_1 = "CD34", early_erythroids = "GATA2", Immature_Ery_2 = "GATA1", Immature_Ery_3 = "TFRC", Immature_Granulocytes = "AZU1", Not_Immature_Granulocytes = "FCGR3A", im_gran_2 = "CXCL8", diff_2 = "HBA1")
+```{r,  fig.width = 10, fig.height= 10}
+aml_markers = c(Blasts_and_Immature_Ery_1 = "CD34", early_erythroids = "GATA2", Immature_Ery_2 = "GATA1", Immature_Ery_3 = "TFRC", Immature_Granulocytes = "AZU1", Not_Immature_Granulocytes = "FCGR3A", Immature_Granulocytes_2 = "CXCL8", Erythroids = "HBA1")
+
+knitr::kable(data_frame(populations = names(aml_markers), markers = aml_markers))
 
 FeaturePlot(pbmc, aml_markers)
 ```
 
-```{r}
+```{r, eval = F}
 known_pbmc_markers = c(Monocytes_1 = "CD14", 
           Monocytes_2 = "FCN1", 
           b_1 = "CD19", 
@@ -279,6 +290,22 @@ known_pbmc_markers = c(Monocytes_1 = "CD14",
 FeaturePlot(pbmc, known_pbmc_markers)
 
 ```
+
+Based on these data I proposed the following classification
+
+Cluster | Observation | Classification  
+-------- | ----------  | ------------  
+0 | AML - Blasts and Immature Erythroids | CD34 High, Mostly found at diagnosis  
+1 |  Monocytes, Macrophage cells | CD14, FCN1, S100A8  
+2 | AML - Immature Granulocytes | AZU1, Mostly found at diagnosis 
+3 | CD8 cytotoxic T-Cells | CD8A, NKG7 
+4 | AML - Early Erythroids | CD34 high,  Mostly found at relapse  
+5 | AML - mature erythroid cells | HBA1,  Mostly found at relapse  
+6 | CD4 T-Cells | CD3D and not CD8A   
+7 | AML ? | IL8 (CXCL8) Mostly found at diagnosis  
+8 | AML ? | IL8 (CXCL8) , Mostly found at diagnosis  
+9 | Dendritic | FCER1A  
+10 | Megakaryocytes | High PF4  
 
 ```{r cluster_distribution}
 rename_list <- list(
@@ -300,35 +327,15 @@ ggplot(cluster_summary, aes(cluster, cells, fill = cluster)) +
   geom_bar(stat = "identity")
 ```
 
-```{r}
-TSNEPlot(pbmc, colors.use = brewer.pal(n = 11, "Paired")) 
-```
 
-```{r}
-TSNEPlot(pbmc, colors.use = brewer.pal(n = 3, "Paired"), group.by = "orig.ident")
-```
 
-Cluster | Observation | Classification  
--------- | ----------  | ------------  
-0 | AML - Blasts and Immature Erythroids | CD34 and GATA2, Mostly found at diagnosis  
-1 |  Monocytes, Macrophage cells | CD14, FCN1, S100A8  
-2 | AML - Immature Granulocytes | AZU1, Mostly found at diagnosis  
-3 | AML - Early Erythroids | CD34 high,  Mostly found at relapse  
-4 | CD8 cytotoxic T-Cells | CD8A, NKG7  
-5 | AML - mature erythroid cells | HBA1,  Mostly found at relapse  
-6 | CD4 T-Cells | CD3D and not CD8A   
-7 | AML ? | ?, Mostly found at diagnosis  
-8 | AML ? | IL8 (Cxcl8) , Mostly found at diagnosis  
-9 | Dendritic | FCER1A  
-10 | Megakaryocytes | High PF4  
-
-```{r cluster_rename, eval= T, fig.width = 8, fig.height= 8 }
+```{r cluster_rename, eval= T, fig.width = 14, fig.height = 14 }
 new.cluster.ids <- c(
                      "Blasts and Immature Eryth",
                      "CD14+ Monocytes", 
                      "Immature Granulocytes",
-                     "Early Erythroids",
                      "CD8 T cells", 
+                     "Early Erythroids",
                      "Mature Erythroids",
                      "CD4 T cells", 
                      "AML subpopulation 1",
@@ -337,12 +344,14 @@ new.cluster.ids <- c(
                      "Megakaryocytes"
                     )
 
+
+
 current.cluster.ids <- c(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
 pbmc@ident <- plyr::mapvalues(pbmc@ident, from = current.cluster.ids, to = new.cluster.ids)
 
 TSNEPlot(pbmc, 
-                   do.label = T, 
-                   pt.size = 0.5, 
+                   #do.label = T, 
+                   pt.size = 1, 
                    do.return = F, 
                    colors.use = brewer.pal(n = 11, "Paired"), 
                    label.size = 5)
@@ -369,9 +378,13 @@ titles <- c("Diagnosis", "Remission", "Relapse")
 
 p <- map2(p, titles,
             ~.x + 
-            coord_cartesian(c(-40, 30), c(-40, 40)) + 
+            coord_cartesian(c(-40, 40), c(-40, 40)) + 
             labs(title = .y) +
             theme(legend.position = "none"))
 
 plot_grid(plotlist = p, nrow = 3, align = "hv")
+```
+
+```{r save_objs, eval = T}
+saveRDS(pbmc, "analyzed_seurat_object.rds")
 ```
